[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "wickandbergamot-cli-config"
description = "Wickandbergamot: Enterprise Security for the Community by the Community"
version = "1.14.17"
repository = "https://github.com/fair-exchange/wickandbergamot"
license = "Apache-2.0"
homepage = "https://wickandbergamot.org/"
documentation = "https://docs.rs/wickandbergamot-cli-config"

[dependencies]
dirs-next = "2.0.0"
lazy_static = "1.4.0"
serde = "1.0.138"
serde_derive = "1.0.103"
serde_yaml = "0.8.26"
wickandbergamot-clap-utils = { path = "../clap-utils", version = "=1.14.17" }
wickandbergamot-sdk = { path = "../sdk", version = "=1.14.17" }
url = "2.2.2"

[dev-dependencies]
anyhow = "1.0.58"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
