[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "safecoin-cli-output"
description = "Safecoin: Enterprise Security for the Community by the Community"
version = "1.10.32"
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/safecoin-cli-output"

[dependencies]
Inflector = "0.11.4"
base64 = "0.13.0"
chrono = { version = "0.4.11", features = ["serde"] }
clap = "2.33.0"
console = "0.15.0"
humantime = "2.0.1"
indicatif = "0.16.2"
semver = "1.0.6"
serde = "1.0.136"
serde_json = "1.0.79"
safecoin-account-decoder = { path = "../account-decoder", version = "=1.10.32" }
safecoin-clap-utils = { path = "../clap-utils", version = "=1.10.32" }
safecoin-client = { path = "../client", version = "=1.10.32" }
safecoin-cli-config = { path = "../cli-config", version = "=1.10.32" }
safecoin-sdk = { path = "../sdk", version = "=1.10.32" }
safecoin-transaction-status = { path = "../transaction-status", version = "=1.10.32" }
safecoin-vote-program = { path = "../programs/vote", version = "=1.10.32" }
safe-memo = { path = "../../safecoin-program-library/memo/program", version = "=3.0.7", features = ["no-entrypoint"] }

[dev-dependencies]
ed25519-dalek = "=1.0.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
