[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "safecoin-cli-output"
description = "Safecoin: Enterprise Security for the Community by the Community"
version = "1.14.3"
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/safecoin-cli-output"

[dependencies]
Inflector = "0.11.4"
base64 = "0.13.0"
chrono = { version = "0.4.11", features = ["serde"] }
clap = "2.33.0"
console = "0.15.0"
humantime = "2.0.1"
indicatif = "0.16.2"
pretty-hex = "0.3.0"
semver = "1.0.10"
serde = "1.0.138"
serde_json = "1.0.81"
safecoin-account-decoder = { path = "../account-decoder", version = "=1.14.3" }
safecoin-clap-utils = { path = "../clap-utils", version = "=1.14.3" }
safecoin-cli-config = { path = "../cli-config", version = "=1.14.3" }
safecoin-client = { path = "../client", version = "=1.14.3" }
safecoin-sdk = { path = "../sdk", version = "=1.14.3" }
safecoin-transaction-status = { path = "../transaction-status", version = "=1.14.3" }
safecoin-vote-program = { path = "../programs/vote", version = "=1.14.3" }
safe-memo = { version = "=3.0.5", features = ["no-entrypoint"] }

[dev-dependencies]
ed25519-dalek = "=1.0.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
