[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2018"
name = "solana-cli"
description = "Safecoin: Enterprise Security for the Community by the Community"
version = "1.8.12"
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/solana-cli"

[dependencies]
bincode = "1.3.1"
bs58 = "0.3.1"
chrono = { version = "0.4.11", features = ["serde"] }
clap = "2.33.1"
criterion-stats = "0.3.0"
ctrlc = { version = "3.1.5", features = ["termination"] }
console = "0.14.1"
const_format = "0.2.14"
dirs-next = "2.0.0"
log = "0.4.11"
Inflector = "0.11.4"
indicatif = "0.15.0"
humantime = "2.0.1"
num-traits = "0.2"
pretty-hex = "0.2.1"
reqwest = { version = "0.11.2", default-features = false, features = ["blocking", "rustls-tls", "json"] }
semver = "1.0.4"
serde = "1.0.122"
serde_derive = "1.0.103"
serde_json = "1.0.56"
safecoin-account-decoder = { path = "../account-decoder", version = "=1.8.12" }
safecoin-bpf-loader-program = { path = "../programs/bpf_loader", version = "=1.8.12" }
safecoin-clap-utils = { path = "../clap-utils", version = "=1.8.12" }
safecoin-cli-config = { path = "../cli-config", version = "=1.8.12" }
safecoin-cli-output = { path = "../cli-output", version = "=1.8.12" }
safecoin-client = { path = "../client", version = "=1.8.12" }
safecoin-config-program = { path = "../programs/config", version = "=1.8.12" }
safecoin-faucet = { path = "../faucet", version = "=1.8.12" }
safecoin-logger = { path = "../logger", version = "=1.8.12" }
safecoin-net-utils = { path = "../net-utils", version = "=1.8.12" }
solana_rbpf = "=0.2.21"
safecoin-remote-wallet = { path = "../remote-wallet", version = "=1.8.12" }
safecoin-sdk = { path = "../sdk", version = "=1.8.12" }
safecoin-transaction-status = { path = "../transaction-status", version = "=1.8.12" }
safecoin-version = { path = "../version", version = "=1.8.12" }
safecoin-vote-program = { path = "../programs/vote", version = "=1.8.12" }
safe-memo = { version = "=3.0.6", features = ["no-entrypoint"] }
thiserror = "1.0.21"
tiny-bip39 = "0.8.1"
url = "2.1.1"

[dev-dependencies]
safecoin-core = { path = "../core", version = "=1.8.12" }
safecoin-streamer = { path = "../streamer", version = "=1.8.12" }
tempfile = "3.1.0"

[[bin]]
name = "safecoin"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
