[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-cli"
description = "Safecoin: Enterprise Security for the Community by the Community"
version = "1.10.32"
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/solana-cli"

[dependencies]
bincode = "1.3.3"
bs58 = "0.4.0"
clap = "2.33.1"
console = "0.15.0"
const_format = "0.2.22"
criterion-stats = "0.3.0"
crossbeam-channel = "0.5"
ctrlc = { version = "3.2.1", features = ["termination"] }
humantime = "2.0.1"
log = "0.4.14"
num-traits = "0.2"
pretty-hex = "0.2.1"
reqwest = { version = "0.11.10", default-features = false, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
semver = "1.0.6"
serde = "1.0.136"
serde_derive = "1.0.103"
serde_json = "1.0.79"
safecoin-account-decoder = { path = "../account-decoder", version = "=1.10.32" }
safecoin-bpf-loader-program = { path = "../programs/bpf_loader", version = "=1.10.32" }
safecoin-clap-utils = { path = "../clap-utils", version = "=1.10.32" }
safecoin-cli-config = { path = "../cli-config", version = "=1.10.32" }
safecoin-cli-output = { path = "../cli-output", version = "=1.10.32" }
safecoin-client = { path = "../client", version = "=1.10.32" }
safecoin-config-program = { path = "../programs/config", version = "=1.10.32" }
safecoin-faucet = { path = "../faucet", version = "=1.10.32" }
safecoin-logger = { path = "../logger", version = "=1.10.32" }
safecoin-program-runtime = { path = "../program-runtime", version = "=1.10.32" }
safecoin-remote-wallet = { path = "../remote-wallet", version = "=1.10.32" }
safecoin-sdk = { path = "../sdk", version = "=1.10.32" }
safecoin-transaction-status = { path = "../transaction-status", version = "=1.10.32" }
safecoin-version = { path = "../version", version = "=1.10.32" }
safecoin-vote-program = { path = "../programs/vote", version = "=1.10.32" }
solana_rbpf = "=0.2.24"
safe-memo = { path = "../../safecoin-program-library/memo/program", version = "=3.0.7", features = ["no-entrypoint"] }
thiserror = "1.0.30"
tiny-bip39 = "0.8.2"

[dev-dependencies]
safecoin-streamer = { path = "../streamer", version = "=1.10.32" }
safecoin-test-validator = { path = "../test-validator", version = "=1.10.32" }
tempfile = "3.3.0"

[[bin]]
name = "safecoin"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
