[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "safecoin-cli"
description = "Safecoin: Enterprise Security for the Community by the Community"
version = "1.14.17"
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/safecoin-cli"

[dependencies]
bincode = "1.3.3"
bs58 = "0.4.0"
clap = "2.33.1"
console = "0.15.0"
const_format = "0.2.25"
criterion-stats = "0.3.0"
crossbeam-channel = "0.5"
ctrlc = { version = "3.2.2", features = ["termination"] }
humantime = "2.0.1"
log = "0.4.17"
num-traits = "0.2"
pretty-hex = "0.3.0"
reqwest = { version = "0.11.11", default-features = false, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
semver = "1.0.10"
serde = "1.0.138"
serde_derive = "1.0.103"
serde_json = "1.0.81"
safecoin-account-decoder = { path = "../account-decoder", version = "=1.14.17" }
safecoin-address-lookup-table-program = { path = "../programs/address-lookup-table", version = "=1.14.17" }
safecoin-bpf-loader-program = { path = "../programs/bpf_loader", version = "=1.14.17" }
safecoin-clap-utils = { path = "../clap-utils", version = "=1.14.17" }
safecoin-cli-config = { path = "../cli-config", version = "=1.14.17" }
safecoin-cli-output = { path = "../cli-output", version = "=1.14.17" }
safecoin-client = { path = "../client", version = "=1.14.17" }
safecoin-config-program = { path = "../programs/config", version = "=1.14.17" }
safecoin-faucet = { path = "../faucet", version = "=1.14.17" }
safecoin-logger = { path = "../logger", version = "=1.14.17" }
safecoin-program-runtime = { path = "../program-runtime", version = "=1.14.17" }
safecoin-remote-wallet = { path = "../remote-wallet", version = "=1.14.17" }
safecoin-sdk = { path = "../sdk", version = "=1.14.17" }
safecoin-transaction-status = { path = "../transaction-status", version = "=1.14.17" }
safecoin-version = { path = "../version", version = "=1.14.17" }
safecoin-vote-program = { path = "../programs/vote", version = "=1.14.17" }
solana_rbpf = "=0.2.31"
safe-memo = {  version = "=3.0.9", features = ["no-entrypoint"] }
thiserror = "1.0.31"
tiny-bip39 = "0.8.2"

[dev-dependencies]
safecoin-streamer = { path = "../streamer", version = "=1.14.17" }
safecoin-test-validator = { path = "../test-validator", version = "=1.14.17" }
tempfile = "3.3.0"

[[bin]]
name = "safecoin"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
