[package]
name = "safecoin-client-test"
version = "1.10.34"
description = "Safecoin RPC Test"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/safecoin-client-test"
edition = "2021"
publish = false

[dependencies]
futures-util = "0.3.21"
serde_json = "1.0.79"
serial_test = "0.6.0"
safecoin-client = { path = "../client", version = "=1.10.34" }
safecoin-ledger = { path = "../ledger", version = "=1.10.34" }
safecoin-measure = { path = "../measure", version = "=1.10.34" }
safecoin-merkle-tree = { path = "../merkle-tree", version = "=1.10.34" }
safecoin-metrics = { path = "../metrics", version = "=1.10.34" }
safecoin-perf = { path = "../perf", version = "=1.10.34" }
safecoin-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.10.34" }
solana-rpc = { path = "../rpc", version = "=1.10.34" }
safecoin-runtime = { path = "../runtime", version = "=1.10.34" }
safecoin-sdk = { path = "../sdk", version = "=1.10.34" }
safecoin-streamer = { path = "../streamer", version = "=1.10.34" }
safecoin-test-validator = { path = "../test-validator", version = "=1.10.34" }
safecoin-transaction-status = { path = "../transaction-status", version = "=1.10.34" }
safecoin-version = { path = "../version", version = "=1.10.35" }
systemstat = "0.1.10"
tokio = { version = "~1.14.1", features = ["full"] }

[dev-dependencies]
safecoin-logger = { path = "../logger", version = "=1.10.34" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
