[package]
name = "wickandbergamot-client-test"
version = "1.14.17"
description = "Wickandbergamot RPC Test"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/wickandbergamot"
license = "Apache-2.0"
homepage = "https://wickandbergamot.org/"
documentation = "https://docs.rs/wickandbergamot-client-test"
edition = "2021"
publish = false

[dependencies]
futures-util = "0.3.21"
serde_json = "1.0.81"
serial_test = "0.8.0"
wickandbergamot-client = { path = "../client", version = "=1.14.17" }
wickandbergamot-ledger = { path = "../ledger", version = "=1.14.17" }
wickandbergamot-measure = { path = "../measure", version = "=1.14.17" }
wickandbergamot-merkle-tree = { path = "../merkle-tree", version = "=1.14.17" }
wickandbergamot-metrics = { path = "../metrics", version = "=1.14.17" }
wickandbergamot-perf = { path = "../perf", version = "=1.14.17" }
wickandbergamot-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.14.17" }
wickandbergamot-rpc = { path = "../rpc", version = "=1.14.17" }
wickandbergamot-runtime = { path = "../runtime", version = "=1.14.17" }
wickandbergamot-sdk = { path = "../sdk", version = "=1.14.17" }
wickandbergamot-streamer = { path = "../streamer", version = "=1.14.17" }
wickandbergamot-test-validator = { path = "../test-validator", version = "=1.14.17" }
wickandbergamot-transaction-status = { path = "../transaction-status", version = "=1.14.17" }
wickandbergamot-version = { path = "../version", version = "=1.14.17" }
systemstat = "0.1.11"
tokio = { version = "~1.14.1", features = ["full"] }

[dev-dependencies]
wickandbergamot-logger = { path = "../logger", version = "=1.14.17" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
