[package]
name = "safecoin-client"
version = "1.6.19"
description = "Safecoin Client"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/safecoin-client"
license = "Apache-2.0"
edition = "2018"

[dependencies]
base64 = "0.13.0"
bincode = "1.3.1"
bs58 = "0.3.1"
clap = "2.33.0"
indicatif = "0.15.0"
jsonrpc-core = "17.0.0"
log = "0.4.11"
net2 = "0.2.37"
rayon = "1.5.0"
reqwest = { version = "0.11.2", default-features = false, features = ["blocking", "rustls-tls", "json"] }
semver = "0.11.0"
serde = "1.0.122"
serde_derive = "1.0.103"
serde_json = "1.0.56"
safecoin-account-decoder = { path = "../account-decoder", version = ">=1.6.18" }
safecoin-clap-utils = { path = "../clap-utils", version = ">=1.6.18" }
safecoin-faucet = { path = "../faucet", version = ">=1.6.18" }
safecoin-net-utils = { path = "../net-utils", version = ">=1.6.18" }
safecoin-sdk = { path = "../sdk", version = ">=1.6.18" }
safecoin-transaction-status = { path = "../transaction-status", version = ">=1.6.21" }
safecoin-version = { path = "../version", version = ">=1.6.18" }
safecoin-vote-program = { path = "../programs/vote", version = ">=1.6.18" }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tungstenite = "0.10.1"
url = "2.1.1"

[dev-dependencies]
assert_matches = "1.3.0"
jsonrpc-http-server = "17.0.0"
safecoin-logger = { path = "../logger", version = ">=1.6.18" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
