[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "wickandbergamot-dos"
version = "1.14.17"
repository = "https://github.com/wickandbergamot/wickandbergamot"
license = "Apache-2.0"
homepage = "https://wickandbergamot.org/"
publish = false
description = "Tool to send various requests to cluster in order to evaluate the effect on performance"

[dependencies]
bincode = "1.3.3"
clap = { version = "3.1.5", features = ["derive", "cargo"] }
crossbeam-channel = "0.5.4"
itertools = "0.10.3"
log = "0.4.17"
rand = "0.7.0"
serde = "1.0.138"
wickandbergamot-bench-tps = { path = "../bench-tps", version = "=1.14.17" }
wickandbergamot-client = { path = "../client", version = "=1.14.17" }
wickandbergamot-core = { path = "../core", version = "=1.14.17" }
wickandbergamot-faucet = { path = "../faucet", version = "=1.14.17" }
wickandbergamot-gossip = { path = "../gossip", version = "=1.14.17" }
wickandbergamot-logger = { path = "../logger", version = "=1.14.17" }
wickandbergamot-measure = { path = "../measure", version = "=1.14.17" }
wickandbergamot-net-utils = { path = "../net-utils", version = "=1.14.17" }
wickandbergamot-perf = { path = "../perf", version = "=1.14.17" }
wickandbergamot-rpc = { path = "../rpc", version = "=1.14.17" }
wickandbergamot-sdk = { path = "../sdk", version = "=1.14.17" }
wickandbergamot-streamer = { path = "../streamer", version = "=1.14.17" }
wickandbergamot-version = { path = "../version", version = "=1.14.17" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
serial_test = "0.8.0"
wickandbergamot-local-cluster = { path = "../local-cluster", version = "=1.14.17" }
