[package]
name = "safecoin-download-utils"
version = "1.9.29"
description = "Safecoin Download Utils"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/safecoin-download-utils"
edition = "2021"

[dependencies]
console = "0.15.0"
indicatif = "0.16.2"
log = "0.4.14"
reqwest = { version = "0.11.6", default-features = false, features = ["blocking", "rustls-tls", "json"] }
safecoin-sdk = { path = "../sdk", version = "=1.9.29" }
safecoin-runtime = { path = "../runtime", version = "=1.9.29" }

[lib]
crate-type = ["lib"]
name = "solana_download_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
