[package]
name = "safecoin-download-utils"
version = "1.14.17"
description = "Safecoin Download Utils"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/safecoin-download-utils"
edition = "2021"

[dependencies]
console = "0.15.0"
indicatif = "0.16.2"
log = "0.4.17"
reqwest = { version = "0.11.11", default-features = false, features = ["blocking", "brotli", "deflate", "gzip", "rustls-tls", "json"] }
safecoin-runtime = { path = "../runtime", version = "=1.14.17" }
safecoin-sdk = { path = "../sdk", version = "=1.14.17" }

[lib]
crate-type = ["lib"]
name = "safecoin_download_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
