[package]
name = "wickandbergamot-entry"
version = "1.14.17"
description = "Wickandbergamot Entry"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/wickandbergamot/wickandbergamot"
license = "Apache-2.0"
homepage = "https://wickandbergamot.org/"
documentation = "https://docs.rs/wickandbergamot-poh"
edition = "2021"

[dependencies]
bincode = "1.3.3"
crossbeam-channel = "0.5"
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
lazy_static = "1.4.0"
log = "0.4.17"
rand = "0.7.0"
rayon = "1.5.3"
serde = "1.0.138"
wickandbergamot-measure = { path = "../measure", version = "=1.14.17" }
wickandbergamot-merkle-tree = { path = "../merkle-tree", version = "=1.14.17" }
wickandbergamot-metrics = { path = "../metrics", version = "=1.14.17" }
wickandbergamot-perf = { path = "../perf", version = "=1.14.17" }
wickandbergamot-rayon-threadlimit = { path = "../rayon-threadlimit", version = "=1.14.17" }
wickandbergamot-sdk = { path = "../sdk", version = "=1.14.17" }

[dev-dependencies]
matches = "0.1.9"
wickandbergamot-logger = { path = "../logger", version = "=1.14.17" }

[lib]
crate-type = ["lib"]
name = "wickandbergamot_entry"

[[bench]]
name = "entry_sigverify"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
