[package]
name = "safecoin-faucet"
version = "1.10.32"
description = "Safecoin Faucet"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/safecoin-faucet"
edition = "2021"

[dependencies]
bincode = "1.3.3"
byteorder = "1.4.3"
clap = "2.33"
crossbeam-channel = "0.5"
log = "0.4.14"
serde = "1.0.136"
serde_derive = "1.0.103"
safecoin-clap-utils = { path = "../clap-utils", version = "=1.10.32" }
safecoin-cli-config = { path = "../cli-config", version = "=1.10.32" }
safecoin-logger = { path = "../logger", version = "=1.10.32" }
safecoin-metrics = { path = "../metrics", version = "=1.10.32" }
safecoin-sdk = { path = "../sdk", version = "=1.10.32" }
safecoin-version = { path = "../version", version = "=1.10.32" }
safe-memo = { path = "../../safecoin-program-library/memo/program", version = "=3.0.7", features = ["no-entrypoint"] }
thiserror = "1.0"
tokio = { version = "~1.14.1", features = ["full"] }

[lib]
crate-type = ["lib"]
name = "safecoin_faucet"

[[bin]]
name = "safecoin-faucet"
path = "src/bin/faucet.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
