[package]
name = "safecoin-frozen-abi"
version = "1.10.32"
description = "Safecoin Frozen ABI"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/safecoin-frozen-abi"
license = "Apache-2.0"
edition = "2021"

[dependencies]
bs58 = "0.4.0"
bv = { version = "0.11.1", features = ["serde"] }
lazy_static = "1.4.0"
log = "0.4.14"
serde = "1.0.136"
serde_derive = "1.0.103"
serde_bytes = "0.11"
sha2 = "0.10.2"
safecoin-frozen-abi-macro = { path = "macro", version = "=1.10.32" }
thiserror = "1.0"

[target.'cfg(not(target_arch = "bpf"))'.dependencies]
generic-array = { version = "0.14.5", default-features = false, features = ["serde", "more_lengths"] }
im = { version = "15.1.0", features = ["rayon", "serde"] }
memmap2 = "0.5.3"

[target.'cfg(not(target_arch = "bpf"))'.dev-dependencies]
safecoin-logger = { path = "../logger", version = "=1.10.32" }

[build-dependencies]
rustc_version = "0.4"
