[package]
name = "safecoin-genesis-utils"
version = "1.7.17"
description = "Safecoin Genesis Utils"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/safecoin-download-utils"
edition = "2018"

[dependencies]
safecoin-sdk = { path = "../sdk", version = "=1.7.17" }
safecoin-download-utils = { path = "../download-utils", version = "=1.7.17" }
safecoin-runtime = { path = "../runtime", version = "=1.7.17" }

[lib]
crate-type = ["lib"]
name = "safecoin_genesis_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
