[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "safecoin-genesis"
description = "Safecoin: Enterprise Security for the Community by the Community"
version = "1.9.29"
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/safecoin-genesis"

[dependencies]
base64 = "0.12.3"
clap = "2.33.1"
serde = "1.0.130"
serde_json = "1.0.72"
serde_yaml = "0.8.21"
safecoin-clap-utils = { path = "../clap-utils", version = "=1.9.29" }
safecoin-cli-config = { path = "../cli-config", version = "=1.9.29" }
solana-entry = { path = "../entry", version = "=1.9.29" }
safecoin-ledger = { path = "../ledger", version = "=1.9.29" }
safecoin-logger = { path = "../logger", version = "=1.9.29" }
safecoin-runtime = { path = "../runtime", version = "=1.9.29" }
safecoin-sdk = { path = "../sdk", version = "=1.9.29" }
safecoin-stake-program = { path = "../programs/stake", version = "=1.9.29" }
safecoin-version = { path = "../version", version = "=1.9.29" }
safecoin-vote-program = { path = "../programs/vote", version = "=1.9.29" }
tempfile = "3.2.0"

[[bin]]
name = "safecoin-genesis"
path = "src/main.rs"

[lib]
name = "safecoin_genesis"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
