[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "safecoin-genesis"
description = "Safecoin: Enterprise Security for the Community by the Community"
version = "1.14.3"
repository = "https://github.com/fair-exchange/safecoin"
license = "Apache-2.0"
homepage = "https://safecoin.org/"
documentation = "https://docs.rs/safecoin-genesis"

[dependencies]
base64 = "0.13.0"
clap = "2.33.1"
serde = "1.0.138"
serde_json = "1.0.81"
serde_yaml = "0.8.26"
safecoin-clap-utils = { path = "../clap-utils", version = "=1.14.3" }
safecoin-cli-config = { path = "../cli-config", version = "=1.14.3" }
solana-entry = { path = "../entry", version = "=1.14.3" }
safecoin-ledger = { path = "../ledger", version = "=1.14.3" }
safecoin-logger = { path = "../logger", version = "=1.14.3" }
safecoin-runtime = { path = "../runtime", version = "=1.14.3" }
safecoin-sdk = { path = "../sdk", version = "=1.14.3" }
safecoin-stake-program = { path = "../programs/stake", version = "=1.14.3" }
safecoin-version = { path = "../version", version = "=1.14.3" }
safecoin-vote-program = { path = "../programs/vote", version = "=1.14.3" }
tempfile = "3.3.0"

[[bin]]
name = "safecoin-genesis"
path = "src/main.rs"

[lib]
name = "safecoin_genesis"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
