[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "wickandbergamot-genesis"
description = "wickandbergamot: Enterprise Security for the Community by the Community"
version = "1.14.17"
repository = "https://github.com/wickandbergamot/wickandbergamot"
license = "Apache-2.0"
homepage = "https://wickandbergamot.org/"
documentation = "https://docs.rs/wickandbergamot-genesis"

[dependencies]
base64 = "0.13.0"
clap = "2.33.1"
serde = "1.0.138"
serde_json = "1.0.81"
serde_yaml = "0.8.26"
wickandbergamot-clap-utils = { path = "../clap-utils", version = "=1.14.17" }
wickandbergamot-cli-config = { path = "../cli-config", version = "=1.14.17" }
wickandbergamot-entry = { path = "../entry", version = "=1.14.17" }
wickandbergamot-ledger = { path = "../ledger", version = "=1.14.17" }
wickandbergamot-logger = { path = "../logger", version = "=1.14.17" }
wickandbergamot-runtime = { path = "../runtime", version = "=1.14.17" }
wickandbergamot-sdk = { path = "../sdk", version = "=1.14.17" }
wickandbergamot-stake-program = { path = "../programs/stake", version = "=1.14.17" }
wickandbergamot-version = { path = "../version", version = "=1.14.17" }
wickandbergamot-vote-program = { path = "../programs/vote", version = "=1.14.17" }
tempfile = "3.3.0"

[[bin]]
name = "wickandbergamot-genesis"
path = "src/main.rs"

[lib]
name = "wickandbergamot_genesis"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
